# dkrz-hereon-icon-superdropnet

./: .gitignore  Experiment-Description.md  LICENSE  ML-in-ICON.md  Makefile  Makefile.am  Notes.md  Python-from-ICON.md  README.md  Tutorial.md  Warm-Rain-ML-in-ICON.md  configure  configure.ac  requirements.yaml
archived_docs/: ML-in-ICON.md  Notes.md
cffi_interface/: Makefile.am  builder.py  cffi_interface.mk  cffi_module.py  transfer_arrays.py
cffi_interface/models/: plModel.py
cffi_interface/solvers/: moment_solver.py
cffi_interface/trained_models/: new_model.ckpt  old_model.ckpt
docker/: Dockerfile-development
first_demo/: Makefile  Readme.md  builder.py  main.f90  main_mpi.f90  mo_function.f90  mo_pipes.f90  mo_pipes_c.c  mo_pipes_c.h  mo_type.f90  my_module.py  pipe_worker.py  submit.sh
fortran_coupling/: pseudo_superdropnet_coupling_frame.f90  select_coupling.f90  superdropnet_by_cffi.f90  superdropnet_by_pipes.f90  superdropnet_by_yac.f90  superdropnet_config_type.f90
icon_runscripts/: exp.cold_bubble_cffi  exp.cold_bubble_fortran  exp.warm_bubble_cffi  exp.warm_bubble_fortran  exp.warm_bubble_pipes  exp.warm_bubble_yac
notebooks/: AES-Bubble.ipynb  Analysis_OneMonth.ipynb  CPU-vs-GPU-Inference.ipynb  DebugCffi.ipynb  OfflineTest.ipynb  TestScenario.ipynb  Timings-Emission.ipynb  Timings.ipynb
pipes_interface/: Makefile.am  mo_pipes_c.c  mo_pipes_c.h  warm_rain.py  warm_rain_pipe_worker.py
scripts/: submit_first_demo_levante.sh  submit_first_demo_mistral.sh  submit_mistral.sh
src/: Makefile  builder.py  main.f90  mo_function.f90  (+3 more)
(+23 files in other folders)
